[package]
name = "Tabler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
docx-rs = "0.4.17"
rust_xlsxwriter = "0.86.0"
windows = { version = "0.52.0", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_SystemServices", # for CLSCTX_ALL
] }
